# cf-rosetta-e2e-tests

./: .env.example  README.md  pyproject.toml  requirements.txt
rosetta_client/: client.py
tests/: conftest.py  stake_operations.py  test_basic_transactions.py  test_batch_transactions.py  test_multi_io_transactions.py  test_stake_scenarios.py
wallet_utils/: pycardano_wallet.py
